[package]
name = "k1f-tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4.19"
uuid = "1.4.1"
pretty_env_logger = "0.5.0"
tokio = { version ="1.29.1", features = ["rt-multi-thread", "macros"] }