[package]
name = "k1f-tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
reqwest = { version = "0.12.22", features = ["json"] }
log = "0.4.27"
pinger = "2.0.0"
url = "2.5.4"
serde = "1.0.219"
futures = "0.3.31"
lazy_static = "1.5.0"
lazy-regex = "3.4.1"
anyhow = "1.0.98"
uuid = "1.17.0"
pretty_env_logger = "0.5.0"
tokio = { version ="1.46.1", features = ["rt-multi-thread", "macros"] }